<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="411dp"
        android:layout_height="1140dp"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/backarrow"
                    android:padding="15dp"
                    app:srcCompat="@drawable/arrow_back" />

                <ImageView
                    android:id="@+id/togglebar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/backarrow"
                    android:padding="15dp"
                    app:srcCompat="@drawable/ic_baseline_menu_24" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="398dp"
                android:layout_height="1348dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="65dp"
                    android:layout_height="363dp"
                    app:cardBackgroundColor="#403F3F"
                    app:cardCornerRadius="10dp">

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="match_parent"
                        android:layout_height="170dp"
                        android:contentDescription="@string/banner"
                        android:padding="1dp"
                        app:srcCompat="@drawable/banner_pallette"
                        tools:ignore="ImageContrastCheck" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="302dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="15dp"
                        app:cardPreventCornerOverlap="false">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/infohead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentLeft="true"
                                android:padding="15dp"
                                android:text="@string/team_informatiion" />

                            <Button
                                android:id="@+id/buttonadd"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentEnd="true"
                                android:layout_alignParentRight="true"
                                android:fontFamily="monospace"
                                android:text="@string/add_project"
                                android:textColor="@color/white"
                                app:backgroundTint="#6D98F4"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/buttonadd"
                                android:layout_marginTop="8dp"
                                android:text="@string/updates_your_round_will_start_in_some_time_please_be_more_details"
                                android:textColor="#FF0A8E"
                                android:translationX="10dp"
                                tools:ignore="TextContrastCheck" />

                            <TextView
                                android:id="@+id/prehead"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/textView"
                                android:layout_marginTop="8dp"
                                android:padding="10dp"
                                android:text="@string/team"
                                android:translationY="-5dp" />

                            <TextView
                                android:id="@+id/teamname"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/prehead"
                                android:layout_marginTop="1dp"
                                android:fontFamily="@font/averia_serif_libre_bold"
                                android:padding="10dp"
                                android:text="@string/designpals"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textSize="30sp"
                                android:textStyle="bold"
                                android:translationX="28dp"
                                android:translationY="-18dp" />

                            <TextView
                                android:id="@+id/member1"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/teamname"
                                android:layout_marginTop="0dp"
                                android:fontFamily="@font/adamina"
                                android:text="@string/harsh_singhal"
                                android:textColor="#000000"
                                android:textSize="20sp"
                                android:translationX="50dp"
                                android:translationY="-10dp" />

                            <TextView
                                android:id="@+id/member"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/member1"
                                android:layout_marginTop="0dp"
                                android:fontFamily="@font/adamina"
                                android:text="@string/mathew_john"
                                android:textColor="#000000"
                                android:textSize="20sp"
                                android:translationX="50dp" />

                            <TextView
                                android:id="@+id/host"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/teamname"
                                android:layout_marginStart="23dp"
                                android:layout_marginLeft="-203dp"
                                android:layout_marginTop="-5dp"
                                android:layout_toEndOf="@+id/teamname"
                                android:layout_toRightOf="@+id/teamname"
                                android:text="@string/host"
                                android:textColor="#074EE8"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/member"
                                android:layout_marginTop="15dp"
                                android:text="@string/leave_team"
                                android:textColor="#D81B60"
                                android:translationX="75dp" />


                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="302dp"
                        android:clipChildren="false"
                        android:clipToPadding="false"
                        android:divider="@android:color/transparent"
                        android:dividerHeight="0.0px"
                        android:translationY="15dp"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="15dp"
                        app:cardPreventCornerOverlap="false" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="300dp"
                        android:translationY="40dp" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>